added endpoint to list coins by rank
